[package]
name = "FUCK_QCZJ"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
reqwest = {version = "0.11.12",features = ["json"]}
tokio =  {version = "1.21.1", features = ["rt","macros","rt-multi-thread"]}